--- a/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
+++ b/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                     <color key="titleColor" red="0.27250555199999998" green="0.01034594546" blue="0.02310753221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="3zg-A1-so1" kind="show" id="q91-tZ-WWQ"/>
+                                    <segue destination="3zg-A1-so1" kind="show" identifier="ToWishList" id="q91-tZ-WWQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZK3-l5-0a1">
@@ -55,7 +55,7 @@
                                     <color key="titleColor" red="0.27250555199999998" green="0.01034594546" blue="0.02310753221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="An0-oQ-MHB" kind="show" id="31H-y5-6Hb"/>
+                                    <segue destination="An0-oQ-MHB" kind="show" identifier="ToOutfits" id="31H-y5-6Hb"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -97,6 +97,9 @@
                                         <constraint firstAttribute="height" constant="33" id="tAr-hn-0NL"/>
                                     </constraints>
                                     <state key="normal" image="AddSymbol"/>
+                                    <connections>
+                                        <segue destination="gAa-oh-XE0" kind="show" identifier="ToAddOutfit" id="FQ7-5n-9Hg"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.95393797589999996" green="0.27402413930000002" blue="0.27025642859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -128,17 +131,50 @@
         <!--Add Outfit-->
         <scene sceneID="MWZ-X9-oMC">
             <objects>
-                <tableViewController title="Add Outfit" id="gAa-oh-XE0" sceneMemberID="viewController">
+                <tableViewController title="Add Outfit" id="gAa-oh-XE0" customClass="AddOutfitTableViewController" customModule="VirtualWardrobe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YfM-q6-Viw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="tIJ-36-aTX">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OutfitName" id="tIJ-36-aTX">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tIJ-36-aTX" id="gPS-Yt-Wc0">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WardrobeItem" rowHeight="144" id="qUN-eV-EZn">
+                                <rect key="frame" x="0.0" y="72" width="375" height="144"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qUN-eV-EZn" id="BvU-Du-hcN">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="143.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KRi-RE-2VA">
+                                            <rect key="frame" x="16" y="11" width="111" height="122"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Item Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Luv-7t-5oF">
+                                            <rect key="frame" x="135" y="60" width="188" height="24"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="22"/>
+                                            <color key="textColor" red="0.27250555199999998" green="0.01034594546" blue="0.02310753221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="KRi-RE-2VA" firstAttribute="bottom" secondItem="BvU-Du-hcN" secondAttribute="bottomMargin" id="JwU-ip-vW3"/>
+                                        <constraint firstItem="KRi-RE-2VA" firstAttribute="leading" secondItem="BvU-Du-hcN" secondAttribute="leadingMargin" id="Xjg-px-whV"/>
+                                        <constraint firstItem="KRi-RE-2VA" firstAttribute="top" secondItem="BvU-Du-hcN" secondAttribute="topMargin" id="tPQ-wv-TNi"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewItem" rowHeight="101" id="dRT-jk-zzp">
+                                <rect key="frame" x="0.0" y="216" width="375" height="101"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dRT-jk-zzp" id="XTl-Aj-Ra8">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -151,7 +187,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fyX-bV-X9z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2789" y="-596"/>
+            <point key="canvasLocation" x="2788" y="-596.85157421289364"/>
         </scene>
         <!--Virtual Wardrobe-->
         <scene sceneID="zfQ-1V-sJk">
