--- a/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
+++ b/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -246,6 +245,14 @@
                                             <color key="textColor" red="0.56134993654822329" green="0.020639615772179588" blue="0.05745853509998284" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOT-o7-sLR">
+                                            <rect key="frame" x="340" y="111" width="30" height="32"/>
+                                            <color key="backgroundColor" red="0.0022954255770000001" green="0.67098445600000001" blue="0.089143700009999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="16"/>
+                                            <state key="normal" title="L">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="fWU-IK-i93" firstAttribute="top" secondItem="VLL-s5-bjD" secondAttribute="top" constant="5" id="01A-5C-emH"/>
@@ -256,14 +263,17 @@
                                         <constraint firstItem="vHo-tD-n6V" firstAttribute="trailing" secondItem="VLL-s5-bjD" secondAttribute="trailingMargin" id="Y6Z-wM-Pco"/>
                                         <constraint firstItem="Ezu-5E-P4F" firstAttribute="top" secondItem="vHo-tD-n6V" secondAttribute="bottom" constant="8" id="dsb-iR-C7H"/>
                                         <constraint firstItem="Ezu-5E-P4F" firstAttribute="leading" secondItem="fWU-IK-i93" secondAttribute="trailing" constant="12" id="h9J-Pq-qSo"/>
+                                        <constraint firstAttribute="trailing" secondItem="EOT-o7-sLR" secondAttribute="trailing" constant="5" id="hQQ-aH-kJW"/>
+                                        <constraint firstAttribute="bottom" secondItem="EOT-o7-sLR" secondAttribute="bottom" constant="5.5" id="i0S-zd-mP8"/>
                                         <constraint firstAttribute="bottom" secondItem="fWU-IK-i93" secondAttribute="bottom" constant="5" id="mF0-Yc-VwG"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="0.77300731209999995" blue="0.72468197550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <outlet property="clothingImageView" destination="fWU-IK-i93" id="kVQ-YQ-Xx3"/>
-                                    <outlet property="clothingInfoLabel" destination="Ezu-5E-P4F" id="8RJ-cO-rwD"/>
-                                    <outlet property="clothingNameLabel" destination="vHo-tD-n6V" id="Wnz-30-lEa"/>
+                                    <outlet property="itemImageView" destination="fWU-IK-i93" id="kVQ-YQ-Xx3"/>
+                                    <outlet property="itemInfoLabel" destination="Ezu-5E-P4F" id="8RJ-cO-rwD"/>
+                                    <outlet property="itemLoanedButton" destination="EOT-o7-sLR" id="OBr-mH-Ghk"/>
+                                    <outlet property="itemNameLabel" destination="vHo-tD-n6V" id="Wnz-30-lEa"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -403,9 +413,9 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="0.77300731209999995" blue="0.72468197550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <outlet property="clothingImageView" destination="hb3-Di-wmU" id="uas-my-LgN"/>
-                                    <outlet property="clothingInfoLabel" destination="oe3-Rx-REF" id="SCM-4i-533"/>
-                                    <outlet property="clothingNameLabel" destination="LHP-KK-nDZ" id="EMs-Rw-1sz"/>
+                                    <outlet property="itemImageView" destination="hb3-Di-wmU" id="uas-my-LgN"/>
+                                    <outlet property="itemInfoLabel" destination="oe3-Rx-REF" id="SCM-4i-533"/>
+                                    <outlet property="itemNameLabel" destination="LHP-KK-nDZ" id="EMs-Rw-1sz"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -442,14 +452,27 @@
                                             <constraint firstAttribute="height" constant="195" id="L4f-Om-toi"/>
                                         </constraints>
                                     </imageView>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GoW-uo-Lg2" customClass="CurvedEdgeButton" customModule="VirtualWardrobe">
+                                        <rect key="frame" x="8" y="8" width="34" height="33"/>
+                                        <color key="backgroundColor" red="0.0022954255770000001" green="0.67098445600000001" blue="0.089143700009999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="16"/>
+                                        <state key="normal" title="Loan">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loanOrUnloanItem:" destination="pFi-9M-CjT" eventType="touchUpInside" id="1X2-te-bzf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.77300731209999995" blue="0.72468197550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="WZI-aJ-yNw" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="58F-cQ-Xp6"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="top" secondItem="WZI-aJ-yNw" secondAttribute="bottom" constant="8" id="7Ne-wP-J6e"/>
                                     <constraint firstItem="WZI-aJ-yNw" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="45" id="Eho-1X-iBn"/>
+                                    <constraint firstItem="GoW-uo-Lg2" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="i8s-XW-vBh"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="jWI-dJ-nVw"/>
                                     <constraint firstItem="WZI-aJ-yNw" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="sZ8-lz-6ps"/>
+                                    <constraint firstItem="GoW-uo-Lg2" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="8" id="twD-Ou-qy3"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="68" id="wd9-Fj-7rW"/>
                                 </constraints>
                             </scrollView>
@@ -497,6 +520,7 @@
                         <outlet property="cancelButton" destination="SE3-Sv-vln" id="d4M-cB-k5k"/>
                         <outlet property="editButton" destination="6Kg-S5-69C" id="yv2-Ph-pKO"/>
                         <outlet property="itemImageView" destination="PQK-wD-hX6" id="SXc-Y4-JjL"/>
+                        <outlet property="loanButton" destination="GoW-uo-Lg2" id="TVH-Jo-q4j"/>
                         <outlet property="mainScrollView" destination="mS7-FI-rTS" id="4Ae-IU-YxI"/>
                         <outlet property="submitButton" destination="Nd9-HC-M9K" id="6qY-XZ-cN5"/>
                         <outlet property="titleLabel" destination="WZI-aJ-yNw" id="X2G-si-WPv"/>
