--- a/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
+++ b/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -441,26 +442,22 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="555"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Item" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZI-aJ-yNw">
-                                        <rect key="frame" x="8" y="45" width="359" height="26.5"/>
+                                        <rect key="frame" x="8" y="50" width="359" height="26.5"/>
                                         <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
                                         <color key="textColor" red="0.27250555199999998" green="0.01034594546" blue="0.02310753221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="PQK-wD-hX6">
-                                        <rect key="frame" x="68" y="79.5" width="239" height="195"/>
+                                        <rect key="frame" x="68" y="84.5" width="239" height="195"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="195" id="L4f-Om-toi"/>
                                         </constraints>
                                     </imageView>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GoW-uo-Lg2" customClass="CurvedEdgeButton" customModule="VirtualWardrobe">
-                                        <rect key="frame" x="8" y="8" width="34" height="33"/>
-                                        <color key="backgroundColor" red="0.0022954255770000001" green="0.67098445600000001" blue="0.089143700009999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="16"/>
-                                        <state key="normal" title="Loan">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SE3-Sv-vln">
+                                        <rect key="frame" x="8" y="7" width="48" height="30"/>
+                                        <state key="normal" title="Cancel"/>
                                         <connections>
-                                            <action selector="loanOrUnloanItem:" destination="pFi-9M-CjT" eventType="touchUpInside" id="1X2-te-bzf"/>
+                                            <segue destination="deT-eb-dCs" kind="unwind" identifier="UnwindFromItemDetail" unwindAction="unwindSegueWithSegue:" id="sCW-nX-uvV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -468,11 +465,11 @@
                                 <constraints>
                                     <constraint firstItem="WZI-aJ-yNw" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="58F-cQ-Xp6"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="top" secondItem="WZI-aJ-yNw" secondAttribute="bottom" constant="8" id="7Ne-wP-J6e"/>
-                                    <constraint firstItem="WZI-aJ-yNw" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="45" id="Eho-1X-iBn"/>
-                                    <constraint firstItem="GoW-uo-Lg2" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="i8s-XW-vBh"/>
+                                    <constraint firstItem="WZI-aJ-yNw" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="50" id="Eho-1X-iBn"/>
+                                    <constraint firstItem="SE3-Sv-vln" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="7" id="KS5-BM-bLF"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="jWI-dJ-nVw"/>
+                                    <constraint firstItem="SE3-Sv-vln" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="pY0-yW-O4i"/>
                                     <constraint firstItem="WZI-aJ-yNw" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="sZ8-lz-6ps"/>
-                                    <constraint firstItem="GoW-uo-Lg2" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="8" id="twD-Ou-qy3"/>
                                     <constraint firstItem="PQK-wD-hX6" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="68" id="wd9-Fj-7rW"/>
                                 </constraints>
                             </scrollView>
@@ -486,18 +483,22 @@
                                     <action selector="submitItem:" destination="pFi-9M-CjT" eventType="touchUpInside" id="zF5-vc-J6B"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SE3-Sv-vln">
-                                <rect key="frame" x="15" y="627" width="48" height="30"/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <segue destination="deT-eb-dCs" kind="unwind" identifier="UnwindFromItemDetail" unwindAction="unwindSegueWithSegue:" id="sCW-nX-uvV"/>
-                                </connections>
-                            </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Kg-S5-69C">
                                 <rect key="frame" x="330" y="627" width="30" height="30"/>
                                 <state key="normal" title="Edit"/>
                                 <connections>
                                     <action selector="toggleEditingFields:" destination="pFi-9M-CjT" eventType="touchUpInside" id="t4O-HW-y6x"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GoW-uo-Lg2" customClass="CurvedEdgeButton" customModule="VirtualWardrobe">
+                                <rect key="frame" x="7" y="627" width="34" height="33"/>
+                                <color key="backgroundColor" red="0.0022954255770000001" green="0.67098445600000001" blue="0.089143700009999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="16"/>
+                                <state key="normal" title="Loan">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="loanOrUnloanItem:" destination="pFi-9M-CjT" eventType="touchUpInside" id="1X2-te-bzf"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -509,10 +510,10 @@
                             <constraint firstItem="leq-xu-8ml" firstAttribute="bottom" secondItem="Nd9-HC-M9K" secondAttribute="bottom" constant="10" id="7Wf-QT-iVW"/>
                             <constraint firstItem="mS7-FI-rTS" firstAttribute="top" secondItem="leq-xu-8ml" secondAttribute="top" id="LgC-dt-0bv"/>
                             <constraint firstItem="Nd9-HC-M9K" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="bottom" constant="8" id="Nbv-zw-xFK"/>
-                            <constraint firstItem="leq-xu-8ml" firstAttribute="bottom" secondItem="SE3-Sv-vln" secondAttribute="bottom" constant="10" id="UdX-bq-1Mq"/>
+                            <constraint firstItem="leq-xu-8ml" firstAttribute="bottom" secondItem="GoW-uo-Lg2" secondAttribute="bottom" constant="7" id="c8W-vj-HmW"/>
                             <constraint firstItem="leq-xu-8ml" firstAttribute="bottom" secondItem="6Kg-S5-69C" secondAttribute="bottom" constant="10" id="icF-q3-t1I"/>
                             <constraint firstItem="Nd9-HC-M9K" firstAttribute="centerX" secondItem="iJ7-vl-YMx" secondAttribute="centerX" id="rNa-Hx-nHm"/>
-                            <constraint firstItem="SE3-Sv-vln" firstAttribute="leading" secondItem="leq-xu-8ml" secondAttribute="leading" constant="15" id="rWI-1h-Z9A"/>
+                            <constraint firstItem="GoW-uo-Lg2" firstAttribute="leading" secondItem="leq-xu-8ml" secondAttribute="leading" constant="7" id="rU4-72-aCQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="leq-xu-8ml"/>
                     </view>
